--- a/main-darkback/Digital_Performance.html
+++ b/main-darkback/Digital_Performance.html
@@ -230,7 +230,7 @@
                       <img src="assets/Wallboard 3 - Livechat Incoming.png" alt="Email Inbox Icon"
                         style="width: 50px; height: 50px;">
                       <div class="value text-warning" id="incomingLiveChat">
-                        20
+                        0
                       </div>
                       <div class="label">
                         Incoming
@@ -294,11 +294,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-4">
+				<div class="col-4">
                   <div class="card">
                     <div class="card-body">
                       <i class="fas fa-list" style="font-size: 40px;"></i>
-                      <div class="value" id="otherLc" style="color: #B2BEB5	;">
+                      <div class="value text-white" id="otherLc">
                         0
                       </div>
                       <div class="label">
@@ -394,42 +394,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js">
     </script>
-    <script>
-      var ctx = document.getElementById('socialMediaTrend').getContext('2d');
-      var chart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct'],
-          datasets: [{
-            label: 'Facebook',
-            borderColor: '#21a1ff',
-            data: [10, 20, 15, 30, 25, 40, 35, 50, 45, 60]
-          }, {
-            label: 'Instagram',
-            borderColor: '#ff4d4d',
-            data: [5, 15, 10, 20, 15, 30, 25, 40, 35, 50]
-          }, {
-            label: 'X',
-            borderColor: '#ffb84d',
-            data: [2, 12, 8, 18, 14, 28, 22, 36, 30, 44]
-          }, {
-            label: 'Whatsapp',
-            borderColor: '#21ff4d',
-            data: [8, 18, 12, 22, 18, 32, 28, 42, 38, 52]
-          }]
-        },
-        options: {
-          scales: {
-            x: {
-              beginAtZero: true
-            },
-            y: {
-              beginAtZero: true
-            }
-          }
-        }
-      });
-    </script>
+   
 
     <!-- Vendor JS -->
     <script src="js/vendors.min.js"></script>
