--- a/main-darkback/Agent_Site_Activities_Performance.html
+++ b/main-darkback/Agent_Site_Activities_Performance.html
@@ -89,14 +89,14 @@
                 <!-- Main content -->
                 <section class="content">
 
-                    <div class="row mt-4">
+                    <div class="row">
                         <!-- Kolom Kiri -->
                         <div class="col-md-4">
                             <div class="section-titlebg tanjung-priok"> <!-- Larger section title -->
                                 Tanjung Priok
                             </div>                            
                             <!-- Calls Kiri -->
-                            <div class="table-container mt-2">
+                            <div class="table-container">
                                 <h3 class="section-title">
                                     Call
                                 </h3>
@@ -408,7 +408,7 @@
                             <!-- Multi Chat Kanan -->
                             <div class="table-container mt-4">
                                 <h3 class="section-title">
-                                    Multi Chat
+                                    Multichat
                                 </h3>
                                 <table class="table" id="multichatPasarBaru">
                                     <thead>
