--- a/main-darkback/Site_Performance.html
+++ b/main-darkback/Site_Performance.html
@@ -70,34 +70,33 @@
     <!-- Site wrapper -->
     <div class="wrapper">
 
-           <header class="main-header">
-			<div class="d-flex align-items-center logo-box pl-10">
-				<!-- Logo Test -->
-				<a href="index.html" class="logo">
-					<div class="logo-lg">
-						<span class="light-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
-						<span class="dark-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
-					</div>
-				</a>
-			</div>
-			<!-- Header Navbar -->
-			<nav class="navbar navbar-static-top pl-10">
-				<!-- Sidebar toggle button-->
-				<div class="app-menu contact-center-text">
-					Contact Center <br>
-					Bravo Bea Cukai <a class="phone-number" style="color: red; font-size: 24px;">1500225</a>
-				</div>
-				<div class="navbar-custom-menu r-side">
-					<ul class="nav navbar-nav">
-						<li class="btn-group d-md-inline-flex d-none">
-							<div class="app-menu">
-								<a class="date-time-text" style="color: goldenrod;"><span id="dateNya"></span></a>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</nav>
-		</header>
+        <header class="main-header">
+            <div class="d-flex align-items-center logo-box pl-10">
+                <!-- Logo Test -->
+                <a href="index.html" class="logo">
+                    <div class="logo-lg">
+                        <span class="light-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
+                        <span class="dark-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
+                    </div>
+                </a>
+            </div>
+            <!-- Header Navbar -->
+            <nav class="navbar navbar-static-top pl-10">
+                <div class="app-menu contact-center-text">
+                    Contact Center <br>
+                    Bravo Bea Cukai <a class="phone-number" style="color: red; font-size: 24px;">1500225</a>
+                </div>
+                <div class="navbar-custom-menu r-side">
+                    <ul class="nav navbar-nav">
+                        <li class="btn-group d-md-inline-flex d-none">
+                            <div class="app-menu">
+                                <a class="date-time-text" style="color: goldenrod;">Selasa | 01 Oktober 2024 | 08:00</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
@@ -215,7 +214,7 @@
                                     <div class="cardkiribawah">
                                         <div class="card-body">
                                             <img src="assets/Wallboard 3 - Livechat Abandoned.png" alt="Abandoned Chat Icon" style="width:60px; height:60px;">
-                                            <div id="abandonedLiveChatPriok" class="value text-warning">
+                                            <div id="abandonedLiveChatPriok" class="value text-danger">
                                                 0
                                             </div>
                                             <div class="label">
@@ -229,7 +228,7 @@
                                     <div class="cardkiribawah">
                                         <div class="card-body">
                                             <img src="assets/Wallboard 3 - Livechat Queueing.png" alt="Queueing Chat Icon" style="width:60px; height:60px;">
-                                            <div id="queueingLiveChatPriok" class="value text-danger">
+                                            <div id="queueingLiveChatPriok" class="value text-warning">
                                                 0
                                             </div>
                                             <div class="label">
