--- a/main-darkback/Digital_Performance.html
+++ b/main-darkback/Digital_Performance.html
@@ -257,11 +257,11 @@
                     <div class="card-body">
                       <i class="fas fa-comment-slash">
                       </i>
-                      <div class="value text-danger" id="answerLiveChat">
+                      <div class="value" style="color: #009945;" id="answerLiveChat">
                         0
                       </div>
                       <div class="label">
-                        Answer chat
+                        Answer Chat
                       </div>
                     </div>
                   </div>
@@ -285,7 +285,7 @@
                     <div class="card-body">
                       <img src="assets/Wallboard 3 - Livechat Queueing.png" alt="Email Inbox Icon"
                         style="width: 50px; height: 50px;">
-                      <div class="value text-danger" id="queueingLiveChat">
+                      <div class="value text-warning" id="queueingLiveChat">
                         0
                       </div>
                       <div class="label">
@@ -294,7 +294,7 @@
                     </div>
                   </div>
                 </div>
-				<div class="col-4">
+                <div class="col-4">
                   <div class="card">
                     <div class="card-body">
                       <i class="fas fa-list" style="font-size: 40px;"></i>
@@ -302,7 +302,7 @@
                         0
                       </div>
                       <div class="label">
-                        Other
+                        Out Going
                       </div>
                     </div>
                   </div>
@@ -394,7 +394,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js">
     </script>
-   
+
 
     <!-- Vendor JS -->
     <script src="js/vendors.min.js"></script>
