--- a/main-darkback/Digital_Performance.html
+++ b/main-darkback/Digital_Performance.html
@@ -379,10 +379,9 @@
                 </div>
 
               </div>
-              <div class="chart mt-3">
-                <canvas id="socialMediaTrend">
-                </canvas>
-              </div>
+              <div class="chart mt-4" style="border-radius: 10px; height: 294px;">
+                <div id="socialMediaTrend"></div>
+            </div>
             </div>
           </div>
 
@@ -391,10 +390,7 @@
       </div>
     </div>
     <!-- /.content-wrapper -->
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js">
-    </script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.41.0/apexcharts.min.js"></script>
 
     <!-- Vendor JS -->
     <script src="js/vendors.min.js"></script>
