--- a/main-darkback/WallboardServices.html
+++ b/main-darkback/WallboardServices.html
@@ -29,7 +29,8 @@
     }
 
     body {
-      background-color: #000; /* Hitam */
+      background-color: #000;
+      /* Hitam */
     }
 
     .box-tengah {
@@ -61,16 +62,16 @@
     }
 
     .kotak {
-
       padding: 10px;
       border-radius: 5px;
-      margin-bottom: 20px;
       position: relative;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 50px;
+      font-size: 1rem;
+      color: #FFFFFF;
     }
 
     .ikon-kecil {
@@ -79,16 +80,6 @@
       left: 1px;
       font-size: 1rem;
       color: #FFFFFF;
-    }
-
-    .garis-vertikal {
-      width: 2px;
-      background-color: #FFFFFF;
-      height: 270px;
-      position: absolute;
-      left: 100%;
-      top: 0;
-      margin-left: 10px;
     }
 
     .merah {
@@ -100,16 +91,17 @@
     }
 
     .hijau {
-      background-color: #1bc5bd;
+      background-color: #00E396;
     }
 
     .biru-langit {
-      background-color: #6993ff;
+      background-color: #008FFB;
     }
 
     .apexcharts-series {
       margin-bottom: 10px;
     }
+
 
     .header {
       background-color: #1e2746;
@@ -150,7 +142,8 @@
   </style>
 </head>
 
-<body onload="myFunction()" class="hold-transition dark-skin theme-primary sidebar-collapse" style="background-color: #000; color: #fff;">
+<body onload="myFunction()" class="hold-transition dark-skin theme-primary sidebar-collapse"
+  style="background-color: #000; color: #fff;">
 
   <!-- Site wrapper -->
   <div class="wrapper">
@@ -208,45 +201,55 @@
 
                       <div>
                         <div class="box-body">
-                          <!--<div id="row-oriented"></div>-->
                           <div class="row">
-
-                            <div class="col-3 mt-4">
-                              <br>
-                              <div class="kotak merah">
-
-                                <h1 class="text-white" style="font-size: 1rem;" id="callPercent">0</h1>
-
-                                <i class="fa fa-phone ikon-kecil"></i>
+                              <div class="col-3 mt-2">
+                                  <br>
+                                  <div class="kotak merah">
+                                      <h1 class="text-white" style="font-size: 1rem;" id="callPercent">0</h1>
+                                      <i class="fa fa-phone ikon-kecil"></i>
+                                  </div>
+                                  <div class="kotak kuning">
+                                      <h1 class="text-white" style="font-size: 1rem;" id="emailPercent">0</h1>
+                                      <i class="fa fa-envelope ikon-kecil"></i>
+                                  </div>
+                                  <div class="kotak hijau">
+                                      <h1 class="text-white" style="font-size: 1rem;" id="chatPercent">0</h1>
+                                      <i class="fa fa-comments ikon-kecil"></i>
+                                  </div>
+                                  <div class="kotak biru-langit">
+                                      <h1 class="text-white" style="font-size: 1rem;" id="sosmedPercent">0</h1>
+                                      <i class="fa fa-comments-o ikon-kecil"></i>
+                                  </div>
                               </div>
-                              <div class="kotak kuning">
-
-                                <h1 class="text-white" style="font-size: 1rem;" id="emailPercent">0</h1>
-
-                                <i class="fa fa-envelope ikon-kecil"></i>
+                              <div class="col-9" style="margin-top: -24px;">
+                                  <div id="charging-chart"></div>
                               </div>
-                              <div class="kotak hijau">
-
-                                <h1 class="text-white" style="font-size: 1rem;" id="chatPercent">0</h1>
-
-                                <i class="fa fa-comments ikon-kecil"></i>
-                              </div>
-                              <div class="kotak biru-langit">
-
-                                <h1 class="text-white" style="font-size: 1rem;" id="sosmedPercent">0</h1>
-
-                                <i class="fa fa-comments-o ikon-kecil"></i>
-                              </div>
-                              <div class="garis-vertikal mt-4"></div>
-
+                              <!-- Label section -->
+                              <div class="col-12">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <div class="dot"
+                                        style="background-color: #f64e60; width: 12px; height: 12px; border-radius: 50%; margin-right: 8px;">
+                                    </div>
+                                    <span style="margin-right: 20px;">Call</span>
+                                    <div class="dot"
+                                        style="background-color: #ffa800; width: 12px; height: 12px; border-radius: 50%; margin-right: 8px;">
+                                    </div>
+                                    <span style="margin-right: 20px;">Email</span>
+                                    <div class="dot"
+                                        style="background-color: #00E396; width: 12px; height: 12px; border-radius: 50%; margin-right: 8px;">
+                                    </div>
+                                    <span style="margin-right: 20px;">Chat</span>
+                                    <div class="dot"
+                                        style="background-color: #008FFB; width: 12px; height: 12px; border-radius: 50%; margin-right: 8px;">
+                                    </div>
+                                    <span>Socmed</span>
+                                </div>
                             </div>
-                            <div class="col-9 mt-2">
-                              <div id="charging-chart"></div>
-                            </div>
-
                           </div>
-                        </div>
                       </div>
+                      
+                      </div>
+
                   </center>
                 </div>
 
@@ -283,7 +286,7 @@
 
 
                 <div class="col-md-6 col-12">
-                  <div class="box d-flex align-items-center flex-column box-tengah" >
+                  <div class="box d-flex align-items-center flex-column box-tengah">
                     <!-- Menambahkan Title -->
                     <div class="box-title text-center">
                       <h2 class="text-danger mt-3">Call</h2>
@@ -302,7 +305,7 @@
                 </div>
 
                 <div class="col-md-6 col-12">
-                  <div class="box d-flex align-items-center flex-column box-tengah" >
+                  <div class="box d-flex align-items-center flex-column box-tengah">
                     <!-- Menambahkan Title -->
                     <div class="box-title text-center">
                       <h2 class="text-success mt-3">Multichat</h2>
@@ -321,7 +324,7 @@
                 </div>
 
                 <div class="col-md-6 col-12">
-                  <div class="box d-flex align-items-center flex-column box-tengah" >
+                  <div class="box d-flex align-items-center flex-column box-tengah">
                     <!-- Menambahkan Title -->
                     <div class="box-title text-center">
                       <h2 class="text-warning mt-3">Email</h2>
@@ -340,7 +343,7 @@
                 </div>
 
                 <div class="col-md-6 col-12">
-                  <div class="box d-flex align-items-center flex-column box-tengah" >
+                  <div class="box d-flex align-items-center flex-column box-tengah">
                     <!-- Menambahkan Title -->
                     <div class="box-title text-center">
                       <h2 class="text-primary mt-3">Social Media</h2>
