--- a/main-darkback/Agent_Performance.html
+++ b/main-darkback/Agent_Performance.html
@@ -93,8 +93,8 @@
                 <!-- Logo Test -->
                 <a href="index.html" class="logo">
                     <div class="logo-lg">
-                        <span class="light-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
-                        <span class="dark-logo"><img src="../images/bravo.png" alt="logo" width="100"></span>
+                        <span class="light-logo"><img src="../images/bravo.png" alt="logo" width="110"></span>
+                        <span class="dark-logo"><img src="../images/bravo.png" alt="logo" width="110"></span>
                     </div>
                 </a>
             </div>
@@ -133,9 +133,28 @@
                         <div class="col-md-6">
                             <div class="table-container">
                                 <h3 class="section-title">Call</h3>
-                                <table class="table" id="AgentCall">
-
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Nama Agent</th>
+                                            <th style="width:30%">Acd Calls</th>
+                                            <th>Avg Resp Time</th>
+                                            <th>Avg Handle Time</th>
+                                        </tr>
+                                    </thead>
                                 </table>
+                                <div id="containerxx">
+                                    <div id="div1">
+                                        <table class="table">
+                                            <!-- Content will be injected here dynamically -->
+                                        </table>
+                                    </div>
+                                    <div id="div2">
+                                        <table class="table">
+                                            <!-- Duplicate content for scrolling -->
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -157,13 +176,29 @@
                         <!-- Email -->
                         <div class="col-md-6">
                             <div class="table-container">
-                                <h3 class="section-title">
-                                    Email
-                                </h3>
-                                <table class="table" id="listEmail">
-
-
+                                <h3 class="section-title">Email</h3>
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Nama Agent</th>
+                                            <th style="width:30%">Emails</th>
+                                            <th>Avg Resp Time</th>
+                                            <th>Avg Handle Time</th>
+                                        </tr>
+                                    </thead>
                                 </table>
+                                <div id="containerxx">
+                                    <div id="emailDiv1">
+                                        <table class="table">
+                                            <!-- Content will be injected here dynamically -->
+                                        </table>
+                                    </div>
+                                    <div id="emailDiv2">
+                                        <table class="table">
+                                            <!-- Duplicate content for scrolling -->
+                                        </table>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <!-- Comments & More -->
